--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Hux Blog
-SEOTitle: 雷的博客 | Hux Blog
+title: 雷雷
+SEOTitle: 雷的博客
 header-img: img/home-bg.jpg
 email: huxpro@gmail.com
 description: "这里是 @雷 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
